--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -1,6 +1,20 @@
-.profile-container {
-  padding: 0 10%;
-  margin-top: calc(var(--header-height) + var(--spacing-xl));
+.profile-page {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 115px;
+}
+
+.profile-cards {
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-medium);
+}
+
+.profile-cards > div {
+  width: 100%;
+  margin-bottom: var(--spacing-medium);
 }
 
 .profile-header {
@@ -58,11 +72,11 @@
 }
 
 @media (max-width: 768px) {
-  .profile-content {
-    grid-template-columns: 1fr;
+  .profile-page {
+    margin-top: 80px;
+    margin-bottom: 50px;
   }
-
-  .profile-container {
-    padding: 0 5%;
+  .profile-cards {
+    width: 95vw;
   }
 }
