--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -16,27 +16,21 @@
   width: 100%;
   margin-bottom: var(--spacing-medium);
 }
+  .profile-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80vw;
+    margin-bottom: var(--spacing-medium);
+  }
 
-.profile-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: var(--spacing-large);
-}
-
-.edit-button {
-  color: var(--text-color);
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: var(--spacing-small) var(--spacing-medium);
-  transition: color var(--transition-normal) ease;
-}
-
-.edit-button:hover {
-  color: var(--hover-color);
-}
-
+  .edit-button {
+    padding: var(--spacing-small) var(--spacing-medium);
+    border-radius: var(--border-radius);
+    background-color: var(--primary-color);
+    color: white;
+    cursor: pointer;
+  }
 .profile-content {
   border: var(--input-border);
   border-radius: var(--border-radius);
