--- a/src/components/modals/NotificationModal.css
+++ b/src/components/modals/NotificationModal.css
@@ -1,7 +1,8 @@
 .notification-modal {
   position: fixed;
-  top: var(--spacing-large);
-  right: var(--spacing-large);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: var(--z-index-notification);
   animation: slideIn var(--transition-normal) ease-out;
 }
@@ -17,10 +18,12 @@
 
 @keyframes slideIn {
   from {
-    transform: translateX(100%);
+    transform: translate(-50%, -30%);
+    opacity: 0;
   }
   to {
-    transform: translateX(0);
+    transform: translate(-50%, -50%);
+    opacity: 1;
   }
 }
 
