A lot of tweaks and refinements.  Went through all CRUD of objects to test functionality.  Added to profile page feature to manage tenants.

--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -16,15 +16,21 @@
   width: 100%;
   margin-bottom: var(--spacing-medium);
 }
+  .profile-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80vw;
+    margin-bottom: var(--spacing-medium);
+  }
 
-.profile-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 80vw;
-  margin-bottom: var(--spacing-medium);
-}
+  .profile-header h2 {
+    margin-right: auto;
+  }
 
+  .profile-header button {
+    margin-left: var(--spacing-medium);
+  }
 .edit-button {
   padding: var(--spacing-small) var(--spacing-medium);
   border-radius: var(--border-radius);
