--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -12,25 +12,27 @@
   gap: var(--spacing-medium);
 }
 
-.profile-cards > div {
+.profile-cards>div {
   width: 100%;
   margin-bottom: var(--spacing-medium);
 }
-  .profile-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 80vw;
-    margin-bottom: var(--spacing-medium);
-  }
 
-  .profile-header h2 {
-    margin-right: auto;
-  }
+.profile-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80vw;
+  margin-bottom: var(--spacing-medium);
+}
 
-  .profile-header button {
-    margin-left: var(--spacing-medium);
-  }
+.profile-header h2 {
+  margin-right: auto;
+}
+
+.profile-header button {
+  margin-left: var(--spacing-medium);
+}
+
 .edit-button {
   padding: var(--spacing-small) var(--spacing-medium);
   border-radius: var(--border-radius);
@@ -38,23 +40,25 @@
   color: white;
   cursor: pointer;
 }
-  .property-section {
-    border: var(--input-border);
-    border-radius: var(--border-radius);
-    padding: var(--spacing-large);
-    margin-top: var(--spacing-medium);
-    overflow: hidden;
-  }
 
-  .user-card {
-    max-width: 100%;
-    margin: var(--spacing-small) 0;
-  }
+.property-section {
+  border: var(--input-border);
+  border-radius: var(--border-radius);
+  padding: var(--spacing-large);
+  margin-top: var(--spacing-medium);
+  overflow: hidden;
+}
 
-  .property-card {
-    width: 100%;
-    box-sizing: border-box;
-  }
+.user-card {
+  max-width: 100%;
+  margin: var(--spacing-small) 0;
+}
+
+.property-card {
+  width: 100%;
+  box-sizing: border-box;
+}
+
 .property-section h3 {
   color: var(--text-color);
   margin-bottom: var(--spacing-medium);
@@ -95,11 +99,26 @@
 }
 
 @media (max-width: 768px) {
+
+  .profile-content,
+  .property-section,
+  .profile-header {
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+
   .profile-page {
     margin-top: 80px;
     margin-bottom: 50px;
   }
+
   .profile-cards {
     width: 95vw;
   }
+
+  .profile-content {
+    grid-template-columns: 1fr;
+  }
+
 }
