--- a/src/components/user/PropertyCard.css
+++ b/src/components/user/PropertyCard.css
@@ -14,7 +14,7 @@
 }
 
 .add-tenant-button:hover {
-  background-color: var(--primary-color-dark);
+  background-color: var(--primary-color);
 }
 
 @media (max-width: 768px) {
